Fix z-index

--- a/src/components/notifications/Notifications.module.css
+++ b/src/components/notifications/Notifications.module.css
@@ -17,3 +17,7 @@
   height: 30px;
   width:  200px;
 }
+
+.back {
+  z-index: 0;
+}
